# MyBsptach

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jsean/mybspatch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jsean/mybspatch/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jsean/mybspatch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_bspatch/: bintray.gradle  build.gradle
lib_bspatch/src/androidTest/java/com/jsean/lib_bspatch/: ExampleInstrumentedTest.java
lib_bspatch/src/main/: AndroidManifest.xml
lib_bspatch/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
lib_bspatch/src/main/java/com/jsean/lib_bspatch/: BsPatchUtil.java
lib_bspatch/src/main/res/xml/: file_paths.xml
lib_bspatch/src/test/java/com/jsean/lib_bspatch/: ExampleUnitTest.java
